# ai-interviewer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  notes.md  pyproject.toml
.github/workflows/: ci-deploy.yml
app/: main.py
docker/: agent.Dockerfile  streamlit.Dockerfile
docs/: experiment.ipynb  notes.md
infra/: cdk.json  requirements.txt
infra/app/: app.py  ci_access_stack.py  ecr_stack.py
notebooks/: ai_interviewer_langgraph_mvp.ipynb
scripts/: cdk-deploy-ecr.sh  deploy-dev.sh  local-test.sh  pg-logs.sh
src/: ai_interviewer_langgraph_mvp.ipynb  policy_effectiveness.ipynb  streamlit_app.py
src/app/agents/interviewer/: graph.py
src/app/agents/interviewer/nodes/: ask.py  decide.py  generate.py  grade.py  select.py  update.py
src/app/agents/interviewer/prompts/: generate.py  grade.py
src/app/agents/interviewer/utils/: state.py  stats.py
src/app/client/: client.py
src/app/core/: config.py  llm.py
src/app/schema/: models.py
src/app/service/: service.py  sessions.py
src/app/service/utils/: profile.py
src/app/storage/: db.py  store.py
test/: conftest.py  test_flow_manager.py
tests/: conftest.py  test_config.py  test_nodes.py  test_stats.py  test_stream.py  test_streamlit_app.py
